--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReportProductOUTActivity"></activity>
+        <activity android:name=".ReportProductOUTActivity" />
         <activity android:name=".ReportProductINActivity" />
         <activity android:name=".ReportProductActivity" />
         <activity android:name=".EditProductOUTActivity" />
@@ -24,7 +24,8 @@
         <activity android:name=".InsertProductActivity" />
         <activity android:name=".ProductActivity" />
         <activity android:name=".ProductINActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
