--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,13 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.0-alpha04'
     implementation 'com.github.pathiphon:MySqlConnectorJava:0.6.7'
+
+    //Location & Map
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
 }
