--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bank.inventorycontrolsystem">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".LocationActivity"></activity>
+        <activity android:name=".BaseViewModel" />
+        <activity android:name=".BaseRepository" />
+        <activity android:name=".MapDBActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".ReportProductOUTActivity" />
         <activity android:name=".ReportProductINActivity" />
         <activity android:name=".ReportProductActivity" />
@@ -33,6 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAt1DY0XKSHC4m2eNNZVmPcJFjMfFG0v_0" />
     </application>
 
 </manifest>
